completed test by Nish

--- a/__src/templates/test.html
+++ b/__src/templates/test.html
@@ -7,11 +7,208 @@
     </div>
 </div>
 
-<!-- Add Tabs Component Here -->
+<!-- Tabs Component -->
+<div class="c-tabView">
+    <nav class="c-tabView__tabs t-black">
+        <ul role="tablist">
+            <li>Layout Structure</li>
+            <li>Card Components</li>
+        </ul>
+    </nav>
+    <div class="c-tabView__content">
+    	<!-- Tab 1 -->
+        <div class="c-tabView__content__block u-inner">
+        	
+        	<div class="col-grid col-grid-1">
+				<!-- Content Module -->
+				<div class="m-article col-grid-item">
+					<h3 class="m-article__title">Single Column</h3>
+					<img class="m-article__banner" src="https://via.placeholder.com/1000x350?text=Banner+Image" alt="Banner Image">
+					<p class="m-article__text">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus obcaecati nulla ea dolorum, quisquam, quaerat dolores eos exercitationem voluptates doloremque ab ex modi dolore quidem voluptatum quos ipsam laboriosam consequatur.
+					</p>
+					<ul class="m-article__list">
+						<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+						<li>Temporibus obcaecati nulla ea dolorum, quisquam, quaerat dolores eos exercitationem voluptates</li>
+						<li>ab ex modi dolore quidem voluptatum quos ipsam laboriosam consequatur.</li>
+					</ul>
+					<a class="m-article__link" href="#" title="Lorem ipsum dolor...">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a>
+				</div>
+			</div>
 
-<!--
-    IF YOU NEED TO USE JAVASCRIPT, LINK THEM HERE
-    Javascript files should live in the _public/js folder
+			<div class="col-grid col-grid-2">
+				<div class="m-article col-grid-item">
+					<h3 class="m-article__title">Duo Column</h3>
+					<img class="m-article__banner" src="https://via.placeholder.com/1000x350?text=Banner+Image" alt="Banner Image">
+					<p class="m-article__text">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus obcaecati nulla ea dolorum, quisquam, quaerat dolores eos exercitationem voluptates doloremque ab ex modi dolore quidem voluptatum quos ipsam laboriosam consequatur.
+					</p>
+					<ul class="m-article__list">
+						<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+						<li>Temporibus obcaecati nulla ea dolorum, quisquam, quaerat dolores eos exercitationem voluptates</li>
+						<li>ab ex modi dolore quidem voluptatum quos ipsam laboriosam consequatur.</li>
+					</ul>
+					<a class="m-article__link" href="#" title="Lorem ipsum dolor...">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a>
+				</div>
+				<div class="m-article col-grid-item">
+					<h3 class="m-article__title">Duo Column</h3>
+					<img class="m-article__banner" src="https://via.placeholder.com/1000x350?text=Banner+Image" alt="Banner Image">
+					<p class="m-article__text">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus obcaecati nulla ea dolorum, quisquam, quaerat dolores eos exercitationem voluptates doloremque ab ex modi dolore quidem voluptatum quos ipsam laboriosam consequatur.
+					</p>
+					<ul class="m-article__list">
+						<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+						<li>Temporibus obcaecati nulla ea dolorum, quisquam, quaerat dolores eos exercitationem voluptates</li>
+						<li>ab ex modi dolore quidem voluptatum quos ipsam laboriosam consequatur.</li>
+					</ul>
+					<a class="m-article__link" href="#" title="Lorem ipsum dolor...">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a>
+				</div>
+			</div>
+
+			<div class="col-grid col-grid-3">
+				<div class="m-article col-grid-item">
+					<h3 class="m-article__title">Tri Column</h3>
+					<img class="m-article__banner" src="https://via.placeholder.com/1000x350?text=Banner+Image" alt="Banner Image">
+					<p class="m-article__text">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus obcaecati nulla ea dolorum, quisquam, quaerat dolores eos exercitationem voluptates doloremque ab ex modi dolore quidem voluptatum quos ipsam laboriosam consequatur.
+					</p>
+					<ul class="m-article__list">
+						<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+						<li>Temporibus obcaecati nulla ea dolorum, quisquam, quaerat dolores eos exercitationem voluptates</li>
+						<li>ab ex modi dolore quidem voluptatum quos ipsam laboriosam consequatur.</li>
+					</ul>
+					<a class="m-article__link" href="#" title="Lorem ipsum dolor...">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a>
+				</div>
+				<div class="m-article col-grid-item">
+					<h3 class="m-article__title">Tri Column</h3>
+					<img class="m-article__banner" src="https://via.placeholder.com/1000x350?text=Banner+Image" alt="Banner Image">
+					<p class="m-article__text">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus obcaecati nulla ea dolorum, quisquam, quaerat dolores eos exercitationem voluptates doloremque ab ex modi dolore quidem voluptatum quos ipsam laboriosam consequatur.
+					</p>
+					<ul class="m-article__list">
+						<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+						<li>Temporibus obcaecati nulla ea dolorum, quisquam, quaerat dolores eos exercitationem voluptates</li>
+						<li>ab ex modi dolore quidem voluptatum quos ipsam laboriosam consequatur.</li>
+					</ul>
+					<a class="m-article__link" href="#" title="Lorem ipsum dolor...">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a>
+				</div>
+				<div class="m-article col-grid-item">
+					<h3 class="m-article__title">Tri Column</h3>
+					<img class="m-article__banner" src="https://via.placeholder.com/1000x350?text=Banner+Image" alt="Banner Image">
+					<p class="m-article__text">
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus obcaecati nulla ea dolorum, quisquam, quaerat dolores eos exercitationem voluptates doloremque ab ex modi dolore quidem voluptatum quos ipsam laboriosam consequatur.
+					</p>
+					<ul class="m-article__list">
+						<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+						<li>Temporibus obcaecati nulla ea dolorum, quisquam, quaerat dolores eos exercitationem voluptates</li>
+						<li>ab ex modi dolore quidem voluptatum quos ipsam laboriosam consequatur.</li>
+					</ul>
+					<a class="m-article__link" href="#" title="Lorem ipsum dolor...">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</a>
+				</div>
+			</div>
+
+        </div>
+		
+		<!-- Tab 2 -->
+        <div class="c-tabView__content__block u-inner">
+            
+        	<div class="col-grid col-grid-2">
+
+				<!-- Card Module -->
+				<div class="m-card col-grid-item">
+					<!-- card img area -->
+					<div class="m-card__img-area">
+						<img class="m-card__banner" src="https://via.placeholder.com/360x200?text=Card+Banner" alt="Card Banner">
+					</div>
+					<!-- card content area -->
+					<div class="m-card__content-area">
+						<h3 class="m-card__title">
+							<svg class="m-card__title-icon">
+								<use xlink:href="/images/svg/icons-map.svg#location"></use>
+							</svg>
+							Card Title
+						</h3>
+						<p class="m-card__sub-title">by Author's Name</p>
+						<p class="m-card__copy">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus obcaecati nulla ea dolorum, quisquam, quaerat dolores eos exercitationem voluptates doloremque ab ex modi dolore quidem voluptatum quos ipsam laboriosam consequatur.
+						</p>
+						<span class="m-card__actions">
+							<a class="btn btn-action m-card__btn" role="button" href="#" title="Action">Action</a>
+							<a class="btn btn-outward m-card__btn" role="button" href="#" title="Outward">
+								Outward
+								<svg class="btn__title-icon">
+									<use xlink:href="/images/svg/icons-map.svg#target-window"></use>
+								</svg>
+							</a>
+						</span>
+					</div>
+				</div>
+
+				<!-- Card Module -->
+				<div class="m-card m-card--reverse col-grid-item">
+					<!-- card img area -->
+					<div class="m-card__img-area">
+						<img class="m-card__banner" src="https://via.placeholder.com/360x200?text=Card+Banner" alt="Card Banner">
+					</div>
+					<!-- card content area -->
+					<div class="m-card__content-area">
+						<h3 class="m-card__title">
+							<svg class="m-card__title-icon">
+								<use xlink:href="/images/svg/icons-map.svg#location"></use>
+							</svg>
+							Card Title
+						</h3>
+						<p class="m-card__sub-title">by Author's Name</p>
+						<p class="m-card__copy">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus obcaecati nulla ea dolorum, quisquam, quaerat dolores eos exercitationem voluptates doloremque ab ex modi dolore quidem voluptatum quos ipsam laboriosam consequatur.
+						</p>
+						<span class="m-card__actions">
+							<a class="btn btn-action m-card__btn" role="button" href="#" title="Action">Action</a>
+							<a class="btn btn-outward m-card__btn" role="button" href="#" title="Outward">
+								Outward
+								<svg class="btn__title-icon">
+									<use xlink:href="/images/svg/icons-map.svg#target-window"></use>
+								</svg>
+							</a>
+						</span>
+					</div>
+				</div>
+
+				<!-- Card Module -->
+				<div class="m-card m-card--minimal col-grid-item">
+					<!-- card img area -->
+					<div class="m-card__img-area">
+						<img class="m-card__banner" src="https://via.placeholder.com/360x200?text=Card+Banner" alt="Card Banner">
+					</div>
+					<!-- card content area -->
+					<div class="m-card__content-area">
+						<h3 class="m-card__title">
+							<svg class="m-card__title-icon">
+								<use xlink:href="/images/svg/icons-map.svg#location"></use>
+							</svg>
+							Card Title
+						</h3>
+						<p class="m-card__sub-title">by Author's Name</p>
+						<p class="m-card__copy">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus obcaecati nulla ea dolorum, quisquam, quaerat dolores eos exercitationem voluptates doloremque ab ex modi dolore quidem voluptatum quos ipsam laboriosam consequatur.
+						</p>
+						<span class="m-card__actions">
+							<a class="btn btn-action m-card__btn" role="button" href="#" title="Action">Action</a>
+							<a class="btn btn-outward m-card__btn" role="button" href="#" title="Outward">
+								Outward
+								<svg class="btn__title-icon">
+									<use xlink:href="/images/svg/icons-map.svg#target-window"></use>
+								</svg>
+							</a>
+						</span>
+					</div>
+				</div>
+			
+			</div>
+
+        </div>
     
-    <script src="js/main.js"></script>
--->
+    </div>
+</div>
+
+<script src="js/base/tabs.component.js"></script>
